# shared/openapi.yaml
@@ -1001,6 +1001,54 @@ paths:
       responses:
         '200':
           description: OK
+  '/api/t/{slug}/settings':
+    patch:
+      tags:
+        - TenantSettings
+      parameters:
+        - name: slug
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PatchTenantSettingsRequest'
+          text/json:
+            schema:
+              $ref: '#/components/schemas/PatchTenantSettingsRequest'
+          application/*+json:
+            schema:
+              $ref: '#/components/schemas/PatchTenantSettingsRequest'
+      responses:
+        '204':
+          description: No Content
+        '400':
+          description: Bad Request
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '403':
+          description: Forbidden
+          content:
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+            text/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
   '/api/t/{slug}/test-only/messages/{messageId}/edit':
     post:
       tags:
@@ -1286,6 +1334,14 @@ components:
           nullable: true
         email:
           type: string
+          nullable: true
+      additionalProperties: false
+    PatchTenantSettingsRequest:
+      type: object
+      properties:
+        messageEditWindowSeconds:
+          type: integer
+          format: int32
           nullable: true
       additionalProperties: false
     ProblemDetails:
